--- a/src/app/transaction-list/transaction-list.component.html
+++ b/src/app/transaction-list/transaction-list.component.html
@@ -1,22 +1,33 @@
-<div class="container" style="overflow-y: scroll;">
-   <div class="row">
-      <div class="col-2">Date</div>
-      <div class="col-2">Description</div>
-      <div class="col-2">Amount</div>
-      <div class="col-*">Balance</div>
+<div class="transaction-list">
+   <div class="container">
+      <div class="row">
+         <div class="col-12">Welcome to my bank</div>
+      </div>
    </div>
-   <div class="row" *ngFor="let transaction of transactions$ | async ">
-      <div class="col-2">{{transaction.date | date:'d MMMM yyyy H:mm' : 'UTC'}} </div>
-      <div class="col-2">{{transaction.description}}</div>
-      <div class="col-2">{{transaction.amount | number : '1.2-2'}}</div>
-      <div class="col-*">{{transaction.balance | number : '1.2-2'}}</div>
+   <div class="container" style="overflow-y: scroll;">
+      <div class="row header">
+         <div class="col-2">Date</div>
+         <div class="col-2">Description</div>
+         <div class="col-2">Amount</div>
+         <div class="col-*">Balance</div>
+      </div>
+      <div class="row" *ngFor="let transaction of transactions$ | async ">
+         <div class="col-2">{{transaction.date | date:'d MMMM yyyy H:mm' : 'UTC'}} </div>
+         <div class="col-2">{{transaction.description}}</div>
+         <div class="col-2">{{transaction.amount | number : '1.2-2'}}</div>
+         <div class="col-*">{{transaction.balance | number : '1.2-2'}}</div>
+      </div>
    </div>
-</div>
-<div class="row">
-   <app-transaction [transactionType]="TransactionType.deposit" (transactionCompleted)="loadTransactions()">
-   </app-transaction>
-</div>
-<div class="row">
-   <app-transaction [transactionType]="TransactionType.withdrawal" (transactionCompleted)="loadTransactions()">
-   </app-transaction>
+
+   <button *ngIf="ActiveTransaction == null" (click)="setActiveTransaction(TransactionType.deposit)" >Deposit</button>
+   <button *ngIf="ActiveTransaction == null" (click)="setActiveTransaction(TransactionType.withdrawal)" >Withdrawal</button>
+
+   <div *ngIf="ActiveTransaction === TransactionType.deposit" class="row">
+      <app-transaction [transactionType]="TransactionType.deposit" (transactionCompleted)="loadTransactions()" (transactionCancelled)="ActiveTransaction = null" >
+      </app-transaction>
+   </div>
+   <div *ngIf="ActiveTransaction === TransactionType.withdrawal" class="row">
+      <app-transaction [transactionType]="TransactionType.withdrawal" (transactionCompleted)="loadTransactions()" (transactionCancelled)="ActiveTransaction = null" >
+      </app-transaction>
+   </div>
 </div>
