--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -4,7 +4,7 @@
 
         <div class="col">
 
-            <input id="name" name="name" required pattern="^[0-9]+(\.[0-9]{1,2})?$" [(ngModel)]="amount" #name="ngModel" type="number" />
+            <input id="name" name="name" required pattern="^[0-9]+(\.[0-9]{1,2})?$" [(ngModel)]="amount" #name="ngModel" type="number" max="50000" />
 
         </div>
  
@@ -18,7 +18,7 @@
 
         <div class="col">
 
-            <button [disabled]="name.invalid && (name.dirty || name.touched)" (click)="processTransaction(amount,selectedCurrency)" mat-stroked-button color="primary">Submit</button>
+            <button [disabled]="amount > 50000 || name.invalid && (name.dirty || name.touched)" (click)="processTransaction(amount,selectedCurrency)" mat-stroked-button color="primary">Submit</button>
 
         </div>
 
@@ -28,9 +28,8 @@
 
         </div>
 
-        <div *ngIf="name.invalid && (name.dirty || name.touched)" class="col alert alert-danger">
-            there is an error
-
+        <div *ngIf="amount > 50000  || (name.invalid && (name.dirty || name.touched))" class="col alert alert-danger">
+            Amount cannot be blank, below zero, above 50000 or have more than two decimal places
         </div>
 
     </div>
