--- a/src/app/transaction-list/transaction-list.component.html
+++ b/src/app/transaction-list/transaction-list.component.html
@@ -1,33 +1,54 @@
-<div class="transaction-list">
+<br>
+<div class="transaction-outer">
    <div class="container">
-      <div class="row">
-         <div class="col-12">Welcome to my bank</div>
+      <div class="row justify-content-center" style="background-color:blue">
+         <div class="col-auto title-text">Welcome to my bank</div>
       </div>
    </div>
-   <div class="container" style="overflow-y: scroll;">
+   <div class="container transaction-inner" style="overflow-y: scroll;">
       <div class="row header">
          <div class="col-2">Date</div>
-         <div class="col-2">Description</div>
+         <div class="col-4">Description</div>
          <div class="col-2">Amount</div>
          <div class="col-*">Balance</div>
       </div>
       <div class="row" *ngFor="let transaction of transactions$ | async ">
          <div class="col-2">{{transaction.date | date:'d MMMM yyyy H:mm' : 'UTC'}} </div>
-         <div class="col-2">{{transaction.description}}</div>
+         <div class="col-4">{{transaction.description}}</div>
          <div class="col-2">{{transaction.amount | number : '1.2-2'}}</div>
          <div class="col-*">{{transaction.balance | number : '1.2-2'}}</div>
       </div>
    </div>
+</div>
+<br>
+<div class="container">
 
-   <button *ngIf="ActiveTransaction == null" (click)="setActiveTransaction(TransactionType.deposit)" >Deposit</button>
-   <button *ngIf="ActiveTransaction == null" (click)="setActiveTransaction(TransactionType.withdrawal)" >Withdrawal</button>
+   <div class="row">
+      <div class="col-sm-1">
+         <button class="btn" *ngIf="ActiveTransaction == null"
+            (click)="setActiveTransaction(TransactionType.deposit)">Deposit</button>
+      </div>
+      <div class="col-sm-1">
+         <button class="btn" *ngIf="ActiveTransaction == null"
+            (click)="setActiveTransaction(TransactionType.withdrawal)">Withdraw</button>
+      </div>
+   </div>
 
    <div *ngIf="ActiveTransaction === TransactionType.deposit" class="row">
-      <app-transaction [transactionType]="TransactionType.deposit" (transactionCompleted)="setActiveTransaction(null);loadTransactions()" (transactionCancelled)="setActiveTransaction(null)" >
+      <div class="col-sm-12">
+         <app-transaction [transactionType]="TransactionType.deposit"
+            (transactionCompleted)="setActiveTransaction(null);loadTransactions()"
+            (transactionCancelled)="setActiveTransaction(null)">
+         </app-transaction>
+      </div>
+   </div>
+
+   <div *ngIf="ActiveTransaction === TransactionType.withdrawal" class="row">
+      <div class="col-sm-12">
+      <app-transaction [transactionType]="TransactionType.withdrawal"
+         (transactionCompleted)="setActiveTransaction(null);loadTransactions()"
+         (transactionCancelled)="setActiveTransaction(null)">
       </app-transaction>
    </div>
-   <div *ngIf="ActiveTransaction === TransactionType.withdrawal" class="row">
-      <app-transaction [transactionType]="TransactionType.withdrawal" (transactionCompleted)="setActiveTransaction(null);loadTransactions()" (transactionCancelled)="setActiveTransaction(null)" >
-      </app-transaction>
    </div>
 </div>
