--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -1,39 +1,43 @@
 <div class="container">
 
-    <div class="row">
+    <div class="row align-items-center">
 
-        <div class="col">
+        <div class="col-sm-3">
 
-            <input id="name" name="name" required pattern="^[0-9]+(\.[0-9]{1,2})?$" [(ngModel)]="amount" #name="ngModel" type="number" max="50000" />
+            Amount:<input style="height:24px" id="name" name="name" required pattern="^[0-9]+(\.[0-9]{1,2})?$" [(ngModel)]="amount" #name="ngModel" type="number" max="50000" />
 
-        </div>
- 
-        <div class="col">
-
-            <select name="selectedCurrency"  [(ngModel)]="selectedCurrency">
+            <select style="height:24px" name="selectedCurrency"  [(ngModel)]="selectedCurrency">
                 <option *ngFor="let ccy of currencies" [value]="ccy" >{{ccy}}</option>
             </select>
 
         </div>
+ 
+        <div class="col-sm-1">
 
-        <div class="col">
-
-            <button [disabled]="amount === 0 || amount > 50000 || name.invalid && (name.dirty || name.touched)" (click)="processTransaction(amount,selectedCurrency)" mat-stroked-button color="primary">Submit</button>
-
-        </div>
-
-        <div class="col">
-
-            <button  mat-stroked-button color="primary" (click)="cancelTransaction()" >Cancel</button>
+            <button class="btn-submit"  [disabled]="amount === 0 || amount > 50000 || name.invalid && (name.dirty || name.touched)" (click)="processTransaction(amount,selectedCurrency)" mat-stroked-button color="primary">Submit</button>
 
         </div>
 
-        <div *ngIf="amount > 50000  || (name.invalid && (name.dirty || name.touched))" class="col alert alert-danger">
+        <div class="col-sm-1">
+
+            <button class="btn-cancel"  type="button" color="elegant" (click)="cancelTransaction()" >Cancel</button>
+
+        </div>
+
+        
+
+    </div>
+ </div>
+ <br>
+ <div class="container">
+
+    <div class="row">
+
+        <div class="col-sm-12" *ngIf="amount > 50000  || (name.invalid && (name.dirty || name.touched))" class="col alert alert-danger text-center">
             Amount cannot be blank, zero or below, above 50000 or have more than two decimal places
         </div>
 
     </div>
-
 
     
 </div> 
