--- a/src/app/transaction-list/transaction-list.component.scss
+++ b/src/app/transaction-list/transaction-list.component.scss
@@ -1,10 +1,36 @@
 
 
-.transaction-list {
+.transaction-outer {
     font-style: Arial,sans-serif;
     font-size: 12pt;
+  
+}
+
+.transaction-inner {
+
+    height:240px;
 }
 
 .header {
     font-weight: bold;
 }
+
+.title-text {
+    font-weight: bold;
+    color:white;
+}
+
+
+.btn {
+    background-color: DodgerBlue; 
+    border: none; 
+    color: white; 
+    padding: 12px 16px;
+    font-size: 12pt; 
+    cursor: pointer; 
+  }
+  
+  /* Darker background on mouse-over */
+  .btn:hover {
+    background-color: RoyalBlue;
+  }
