--- a/src/app/transaction/transaction.component.scss
+++ b/src/app/transaction/transaction.component.scss
@@ -8,3 +8,32 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+
+.btn-submit {
+  background-color: rgb(41, 134, 38); 
+  border: none; 
+  color: white; 
+  padding: 12px 16px;
+  font-size: 12pt; 
+  cursor: pointer; 
+}
+
+
+.btn-submit:not([disabled]):hover {
+  background-color: rgb(22, 78, 22);
+}
+
+.btn-cancel {
+  background-color: rgb(255, 30, 30); 
+  border: none; 
+  color: white; 
+  padding: 12px 16px;
+  font-size: 12pt; 
+  cursor: pointer; 
+}
+
+.btn-cancel:hover {
+  background-color: rgb(92, 27, 27);
+}
+
