--- a/src/app/transaction/transaction.component.scss
+++ b/src/app/transaction/transaction.component.scss
@@ -17,6 +17,7 @@ input[type=number] {
   padding: 12px 16px;
   font-size: 12pt; 
   cursor: pointer; 
+  border-radius:3px;
 }
 
 
@@ -31,6 +32,7 @@ input[type=number] {
   padding: 12px 16px;
   font-size: 12pt; 
   cursor: pointer; 
+  border-radius:3px;
 }
 
 .btn-cancel:hover {
