--- a/src/app/transaction-list/transaction-list.component.scss
+++ b/src/app/transaction-list/transaction-list.component.scss
@@ -28,9 +28,10 @@
     padding: 12px 16px;
     font-size: 12pt; 
     cursor: pointer; 
+    border-radius:3px;
   }
   
-  /* Darker background on mouse-over */
+ 
   .btn:hover {
     background-color: RoyalBlue;
   }
